[gd_scene load_steps=6 format=3 uid="uid://c7qxggopybdcp"]

[ext_resource type="Script" path="res://Core/Main/data_manager.gd" id="1_0omql"]
[ext_resource type="Script" path="res://Core/Main/plugins_manager/plugin_manager.gd" id="1_rsphx"]
[ext_resource type="Script" path="res://Core/Settings/settings.gd" id="1_sfop8"]
[ext_resource type="Script" path="res://Core/LUA/permissions/permission_manager.gd" id="4_35yi4"]

[sub_resource type="GDScript" id="GDScript_yprjh"]
script/source = "extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	
	%load.pressed.connect(_on_load)
	
	%test_TEST.pressed.connect(_on_test)
	%test_TEST_HEY.pressed.connect(_on_test_hey)
	%test_PERM.pressed.connect(_on_perm)
	%test_low.pressed.connect(_on_low)
	%test_mid.pressed.connect(_on_mid)
	%test_high.pressed.connect(_on_high)
	%lvl_low.pressed.connect(_on_lvl_low)
	%lvl_mid.pressed.connect(_on_lvl_mid)
	%lvl_high.pressed.connect(_on_lvl_high)
	
	pass # Replace with function body.


func _on_load():
	PluginManager.get_singleton().VERIFY_PLUGINS()

#### Test Permission

func _on_test():
	var perm: ResPlugin = PluginManager.get_singleton().LIST()[0]
	print(\"TEST: \", perm.get_perm('TEST'))

func _on_test_hey():
	var perm: ResPlugin = PluginManager.get_singleton().LIST()[0]
	print(\"TEST:HEY: \", perm.get_perm('TEST:HEY'))

func _on_perm():
	var perm: ResPlugin = PluginManager.get_singleton().LIST()[0]
	print(\"PERM: \", perm.get_perm('PERM'))

func _on_low():
	var perm: ResPlugin = PluginManager.get_singleton().LIST()[0]
	print(\"PERM:LOW: \", perm.get_perm('PERM:LOW'))

func _on_mid():
	var perm: ResPlugin = PluginManager.get_singleton().LIST()[0]
	print(\"PERM:MEDIUM: \", perm.get_perm('PERM:MEDIUM'))

func _on_high():
	var perm: ResPlugin = PluginManager.get_singleton().LIST()[0]
	print(\"PERM:HIGH: \", perm.get_perm('PERM:HIGH'))

func _on_lvl_low():
	var perm: ResPlugin = PluginManager.get_singleton().LIST()[0]
	print(\"LOW: \", perm.get_low_perm())

func _on_lvl_mid():
	var perm: ResPlugin = PluginManager.get_singleton().LIST()[0]
	print(\"MEDIUM: \", perm.get_mid_perm())

func _on_lvl_high():
	var perm: ResPlugin = PluginManager.get_singleton().LIST()[0]
	print(\"HIGH: \", perm.get_high_perm())
"

[node name="TestPluginManager01" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_yprjh")

[node name="DataManager" type="Node" parent="."]
script = ExtResource("1_0omql")

[node name="Settings" type="Node" parent="."]
script = ExtResource("1_sfop8")

[node name="PluginManager" type="Node" parent="."]
script = ExtResource("1_rsphx")

[node name="PermissionManager" type="Node" parent="."]
script = ExtResource("4_35yi4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="load" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "load Plugin"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HAS"
horizontal_alignment = 1

[node name="test_TEST" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TEST"

[node name="test_TEST_HEY" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TEST:HEY"

[node name="test_PERM" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PERM
"

[node name="test_low" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PERM:LOW"

[node name="test_mid" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PERM:MEDIUM"

[node name="test_high" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PERM:HIGH"

[node name="lvl_low" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "level LOW"

[node name="lvl_mid" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "level MID"

[node name="lvl_high" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "level HIGH"
